--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -456,6 +456,14 @@ title = {{Tractometer: Online evaluation system for tractography}},
 year = {2012}
 }
 
+@article{Cote2013tractometer,
+  title={Tractometer: Towards Validation of Tractography Pipelines},
+  author={C{\^o}t{\'e}, Marc-Alexandre and Girard, Gabriel and Bor{\'e}, Arnaud and Garyfallidis, Eleftherios and Houde, Jean-Christophe and Descoteaux, Maxime},
+  journal={Medical image analysis},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @inproceedings{Mani2012,
 address = {Barcelona, Spain},
 author = {Mani, M and Jacob, M and Guidon, A and Liu, C and Song, A and Magnotta, V and Zhong, J},
