--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -12132,6 +12132,15 @@ year = {2013}
   publisher={IEEE}
 }
 
+@inproceedings{westin:97,
+  title={Geometrical diffusion measures for MRI from tensor basis analysis},
+  author={Westin, Carl-Fredrik and Peled, Sariel and Gudbjartsson, Hakon and Kikinis, Ron and Jolesz, Ferenc A},
+  booktitle={Proceedings of ISMRM},
+  volume={97},
+  pages={1742},
+  year={1997}
+}
+
 @book{mckinney_python:12,
   title={Python for Data Analysis},
   author={McKinney, William},
