--- a/paper/dipy_paper.tex
+++ b/paper/dipy_paper.tex
@@ -166,14 +166,14 @@ tractography, Probabilistic tractography, Fiber tracking, Medical Visualization.
 \section{Skeleton}
 Here is a possible outline for the paper:
 \begin{verbatim}
-Short overview of other dMRI analysis tools
+Introduction
 Philosophy/Mission
 General Design Aspects
 How we work (git/github etc)
 File Formats 
 Preprocessing
-   Eddy currents?
-   Denoising?
+   Load/Save data
+   Mask the background
 Reconstruction
    DTI 
    DSI
@@ -186,8 +186,8 @@ Post-tracking
    Segmentation
    Track\_counts
    Track Lengths & other statistics
-   Connectivity matrix?
-Conclusions
+   Connectivity matrix
+Discussion/Conclusions
 \end{verbatim}
 
 \section{Introduction}
