Edited introduction, terminology section and tensor part.
Also: added some references.

--- a/paper/scilBibTex.bib
+++ b/paper/scilBibTex.bib
@@ -4052,7 +4052,23 @@ editor = {},
 }
 
 
-
+@article{Ennis2006,
+abstract = {This paper outlines the mathematical development and application of two analytically orthogonal tensor invariants sets. Diffusion tensors can be mathematically decomposed into shape and orientation information, determined by the eigenvalues and eigenvectors, respectively. The developments herein orthogonally decompose the tensor shape using a set of three orthogonal invariants that characterize the magnitude of isotropy, the magnitude of anisotropy, and the mode of anisotropy. The mode of anisotropy is useful for resolving whether a region of anisotropy is linear anisotropic, orthotropic, or planar anisotropic. Both tensor trace and fractional anisotropy are members of an orthogonal invariant set, but they do not belong to the same set. It is proven that tensor trace and fractional anisotropy are not mutually orthogonal measures of the diffusive process. The results are applied to the analysis and visualization of diffusion tensor magnetic resonance images of the brain in a healthy volunteer. The theoretical developments provide a method for generating scalar maps of the diffusion tensor data, including novel fractional anisotropy maps that are color encoded for the mode of anisotropy and directionally encoded colormaps of only linearly anisotropic structures, rather than of high fractional anisotropy structures.},
+author = {Ennis, Daniel B and Kindlmann, Gordon},
+doi = {10.1002/mrm.20741},
+file = {:Users/arokem/Documents/MendeleyDesktop/lmi.bwh.harvard.edu\_papers\_pdfs\_2006\_ennisMRM06.pdf:pdf},
+issn = {0740-3194},
+journal = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+keywords = {Anisotropy,Brain Mapping,Brain Mapping: methods,Diffusion Magnetic Resonance Imaging,Diffusion Magnetic Resonance Imaging: methods,Humans,Image Processing, Computer-Assisted,Linear Models},
+month = jan,
+number = {1},
+pages = {136--46},
+pmid = {16342267},
+title = {{Orthogonal tensor invariants and the analysis of diffusion tensor magnetic resonance images.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/16342267},
+volume = {55},
+year = {2006}
+}
 
 @article{Guevara2010,
 author = {Guevara, P and Poupon, C and Rivi\`{e}re, D and Cointepas, Y and Descoteaux, M and Thirion, B and Mangin, J-F},
@@ -10975,6 +10991,22 @@ year = {2011}
   timestamp = {2009.11.30}
 }
 
+@article{wandell-yeatman:13,
+abstract = {Human neuroimaging is expanding our understanding of the biological processes that are essential for healthy brain function. Methods such as diffusion weighted imaging provide insights into white matter fascicles, growth and pruning of dendritic arbors and axons, and properties of glia. This review focuses on what we have learned from diffusion imaging about these processes and the development of reading circuitry in the human brain. Understanding reading circuitry development may suggest ways to improve how we teach children to read.},
+author = {Wandell, Brian A and Yeatman, Jason D},
+doi = {10.1016/j.conb.2012.12.005},
+issn = {1873-6882},
+journal = {Current opinion in neurobiology},
+month = jan,
+pages = {1--8},
+pmid = {23312307},
+publisher = {Elsevier Ltd},
+title = {{Biological development of reading circuits.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23312307},
+year = {2013}
+}
+
+
 
 @article{Jellison2004,
 author = {Jellison, Brian J. and Field, Aaron S. and Medow, Joshua and Lazar, Mariana and Salamat, M. Shariar and Alexander, Andrew L.},
@@ -12275,6 +12307,22 @@ year = {2010},
 editor = {D.K. Jones},
 publisher = {Oxford University Press}
 }
+
+
+@article{yeatman2012afq,
+    author = {Yeatman, , Jason D. AND Dougherty, , Robert F. AND Myall, , Nathaniel J. AND Wandell, , Brian A. AND Feldman, , Heidi M.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Tract Profiles of White Matter Properties: Automating Fiber-Tract Quantification},
+    year = {2012},
+    month = {11},
+    volume = {7},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0049790},
+    pages = {e49790},
+    abstract = {<p>Tractography based on diffusion weighted imaging (DWI) data is a method for identifying the major white matter fascicles (tracts) in the living human brain. The health of these tracts is an important factor underlying many cognitive and neurological disorders. <italic>In vivo</italic>, tissue properties may vary systematically along each tract for several reasons: different populations of axons enter and exit the tract, and disease can strike at local positions within the tract. Hence quantifying and understanding diffusion measures along each fiber tract (Tract Profile) may reveal new insights into white matter development, function, and disease that are not obvious from mean measures of that tract. We demonstrate several novel findings related to Tract Profiles in the brains of typically developing children and children at risk for white matter injury secondary to preterm birth. First, fractional anisotropy (FA) values vary substantially within a tract but the Tract FA Profile is consistent across subjects. Thus, Tract Profiles contain far more information than mean diffusion measures. Second, developmental changes in FA occur at specific positions within the Tract Profile, rather than along the entire tract. Third, Tract Profiles can be used to compare white matter properties of individual patients to standardized Tract Profiles of a healthy population to elucidate unique features of that patient's clinical condition. Fourth, Tract Profiles can be used to evaluate the association between white matter properties and behavioral outcomes. Specifically, in the preterm group reading ability is positively correlated with FA measured at specific locations on the left arcuate and left superior longitudinal fasciculus and the magnitude of the correlation varies significantly along the Tract Profiles. We introduce open source software for automated fiber-tract quantification (AFQ) that measures Tract Profiles of MRI parameters for 18 white matter tracts. With further validation, AFQ Tract Profiles have potential for informing clinical management and decision-making.</p>},
+    number = {11},
+    doi = {10.1371/journal.pone.0049790}
+}        
 
 @comment{jabref-meta: groupsversion:3;}
 
