--- a/paper/diffusion.bib
+++ b/paper/diffusion.bib
@@ -96,6 +96,23 @@
   year           = 2007
 }
 
+
+@article{yeatman2012afq,
+    author = {Yeatman, , Jason D. AND Dougherty, , Robert F. AND Myall, , Nathaniel J. AND Wandell, , Brian A. AND Feldman, , Heidi M.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Tract Profiles of White Matter Properties: Automating Fiber-Tract Quantification},
+    year = {2012},
+    month = {11},
+    volume = {7},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0049790},
+    pages = {e49790},
+    abstract = {<p>Tractography based on diffusion weighted imaging (DWI) data is a method for identifying the major white matter fascicles (tracts) in the living human brain. The health of these tracts is an important factor underlying many cognitive and neurological disorders. <italic>In vivo</italic>, tissue properties may vary systematically along each tract for several reasons: different populations of axons enter and exit the tract, and disease can strike at local positions within the tract. Hence quantifying and understanding diffusion measures along each fiber tract (Tract Profile) may reveal new insights into white matter development, function, and disease that are not obvious from mean measures of that tract. We demonstrate several novel findings related to Tract Profiles in the brains of typically developing children and children at risk for white matter injury secondary to preterm birth. First, fractional anisotropy (FA) values vary substantially within a tract but the Tract FA Profile is consistent across subjects. Thus, Tract Profiles contain far more information than mean diffusion measures. Second, developmental changes in FA occur at specific positions within the Tract Profile, rather than along the entire tract. Third, Tract Profiles can be used to compare white matter properties of individual patients to standardized Tract Profiles of a healthy population to elucidate unique features of that patient's clinical condition. Fourth, Tract Profiles can be used to evaluate the association between white matter properties and behavioral outcomes. Specifically, in the preterm group reading ability is positively correlated with FA measured at specific locations on the left arcuate and left superior longitudinal fasciculus and the magnitude of the correlation varies significantly along the Tract Profiles. We introduce open source software for automated fiber-tract quantification (AFQ) that measures Tract Profiles of MRI parameters for 18 white matter tracts. With further validation, AFQ Tract Profiles have potential for informing clinical management and decision-making.</p>},
+    number = {11},
+    doi = {10.1371/journal.pone.0049790}
+}        
+
+
 @Article{liu2004characterizing,
   Author         = {Liu, C. and Bammer, R. and Acar, B. and Moseley, M.E.},
   Title          = {Characterizing non-gaussian diffusion by using
@@ -11580,5 +11597,21 @@
   Publisher      = {Morgan Kaufmann},
   isbn           = {1558604790},
   year           = 1988
+}
+
+
+@article{Wandell2013,
+abstract = {Human neuroimaging is expanding our understanding of the biological processes that are essential for healthy brain function. Methods such as diffusion weighted imaging provide insights into white matter fascicles, growth and pruning of dendritic arbors and axons, and properties of glia. This review focuses on what we have learned from diffusion imaging about these processes and the development of reading circuitry in the human brain. Understanding reading circuitry development may suggest ways to improve how we teach children to read.},
+author = {Wandell, Brian A and Yeatman, Jason D},
+doi = {10.1016/j.conb.2012.12.005},
+issn = {1873-6882},
+journal = {Current opinion in neurobiology},
+month = jan,
+pages = {1--8},
+pmid = {23312307},
+publisher = {Elsevier Ltd},
+title = {{Biological development of reading circuits.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23312307},
+year = {2013}
 }
 
